added schedule controller & related apis
